--- a/pyspider/webui/templates/debug.html
+++ b/pyspider/webui/templates/debug.html
@@ -37,9 +37,9 @@
 
   <body>
     <section id="control">
-      <div class="title pull-left"><a href="/">pyspider</a> &gt; {{ project_name }}</div>
+      <div class="title pull-left"><a href="/">X</a> &gt; {{ project_name }}</div>
       <div class="pull-right">
-        <a href="http://docs.pyspider.org/" target="_blank">Documentation</a>
+{#        <a href="http://docs.pyspider.org/" target="_blank">Documentation</a>#}
         <span class="webdav-btn">WebDAV Mode</span>
       </div>
     </section>
